@@ -1,7 +1,8 @@
 2008-10-08  Don Porter  <dgp@users.sourceforge.net>
 
-	* tests/wm.test:	Update expected error messages from
-	[wm iconphoto] to match the new message. [Bug 2021443]
+	* unix/tkUnixWm.c:	Restored consistency of error messages from
+	* macosx/tkMacOSXWm.c:	[wm iconphoto] with the test suite and across
+	all platforms.  [Bug 2021443]
 
 2008-10-07  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
